# video_audio_translator-jls

./: README.md  pyproject.toml
src/dubber/: cli.py  config.py  models.py  pipeline.py  transcription.py  translation.py
src/dubber/audio/: mix.py  separation.py
src/dubber/tts/: xtts_engine.py
src/dubber/utils/: device.py  languages.py  logging.py
tests/: test_basic.py  test_integration_full_pipeline.py  test_mix.py  test_separation.py  test_transcription.py  test_tts.py
